src/components/pages/authentication/Authentication.module.css
.pageContainer {
  display: flex;
  flex-direction: column;
  height: 100vh;
  align-items: center;
  background-color: var(--noire);
  padding: 48px 24px;
  gap: 48px;
  box-sizing: border-box;
  overflow-y: scroll;
}

.logo {
  min-height: 27px;
}

.form {
  width: 100%;
  max-width: 327px;
  display: flex;
  flex-direction: column;
  padding: 24px 24px 32px 24px;
  box-sizing: border-box;
  background-color: var(--midnight-blue);
  border-radius: 10px;
  color: white;
  font-family: 'Outfit';
  gap: 40px;
}

.title {
  font-size: 32px;
  font-weight: 300;
}

.inputsContainer {
  display: flex;
  flex-direction: column;
  gap: 24px;
}

.inputContainer {
  position: relative;
  padding-right: 16px;
}

.inputErrorText {
  position: absolute;
  top: 3px;
  right: 16px;
  color: var(--orange-red);
  font-size: 13px;
  font-family: 'Outfit';
  font-weight: 300;
}

.credentialErrorText {
  font-family: 'Outfit';
  font-weight: 300;
  font-size: 15px;
  color: var(--orange-red);
  margin-bottom: -12px;
  margin-top: -12px;
}

.input {
  width: 100%;
  padding-left: 16px;
  color: white;
  outline: none;
  border: none;
  background-color: var(--midnight-blue);
  font-family: 'Outfit';
  font-size: 15px;
  font-weight: 300;
  box-shadow: 0 1px 0 -0.5px var(--pale-blue);
  caret-color: var(--orange-red);
  padding-bottom: 17px;
  text-transform: capitalize;
}

.clickablesContainer {
  display: flex;
  flex-direction: column;
  gap: 24px;
}

.button {
  font-family: 'Outfit';
  font-size: 15px;
  font-weight: 300;
  background-color: var(--orange-red);
  outline: none;
  border: none;
  border-radius: 6px;
  height: 48px;
  color: white;
  cursor: pointer;
}

.modeSwapContainer {
  display: flex;
  flex-direction: row;
  justify-content: center;
  gap: 9px;
}

.linkText {
  text-decoration: none;
  color: var(--orange-red);
  font-size: 15px;
  font-weight: 300;
}

